--- a/glade/hash.glade
+++ b/glade/hash.glade
@@ -94,7 +94,7 @@
               <widget class="GtkProgressBar" id="progressbar">
                 <property name="visible">True</property>
                 <property name="pulse_step">0.10000000149011612</property>
-                <property name="text" translatable="yes">0%</property>
+                <property name="text">0%</property>
               </widget>
               <packing>
                 <property name="expand">False</property>
