--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -589,7 +589,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="tooltip" translatable="yes">Show/Hide transfers panel</property>
-                <property name="label" translatable="yes">+/-</property>
+                <property name="label">+/-</property>
                 <property name="response_id">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
@@ -935,7 +935,7 @@
   <widget class="GtkAboutDialog" id="aboutDialog">
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
-    <property name="copyright" translatable="yes">Copyright © 2009-2010 FreeDC++</property>
+    <property name="copyright">Copyright © FreeDC++ 2009-2010</property>
     <property name="comments" translatable="yes">DC++ Client based on the source code LinuxDC++
 
 FreeDC++ version: 0.0.1
@@ -1205,7 +1205,7 @@ Contributors:
               <widget class="GtkLabel" id="label7">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">TTH</property>
+                <property name="label">TTH</property>
               </widget>
               <packing>
                 <property name="top_attach">4</property>
