--- a/glade/searchspy.glade
+++ b/glade/searchspy.glade
@@ -60,6 +60,26 @@
           </packing>
         </child>
         <child>
+          <widget class="GtkLabel" id="label4">
+            <property name="visible">True</property>
+            <property name="tooltip" translatable="yes">Frame search size</property>
+            <property name="label" translatable="yes">Top: &gt;</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">3</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkLabel" id="topSearchLabel">
+            <property name="visible">True</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">4</property>
+          </packing>
+        </child>
+        <child>
           <widget class="GtkLabel" id="label3">
             <property name="visible">True</property>
             <property name="tooltip" translatable="yes">Frame search size</property>
@@ -67,7 +87,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">3</property>
+            <property name="position">5</property>
           </packing>
         </child>
         <child>
@@ -76,7 +96,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">4</property>
+            <property name="position">6</property>
           </packing>
         </child>
         <child>
@@ -87,7 +107,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">5</property>
+            <property name="position">7</property>
           </packing>
         </child>
         <child>
@@ -96,7 +116,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">6</property>
+            <property name="position">8</property>
           </packing>
         </child>
         <child>
@@ -110,7 +130,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">7</property>
+            <property name="position">9</property>
           </packing>
         </child>
         <child>
@@ -124,7 +144,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">8</property>
+            <property name="position">10</property>
           </packing>
         </child>
         <child>
@@ -138,7 +158,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">9</property>
+            <property name="position">11</property>
           </packing>
         </child>
       </widget>
