UPnP (core branch).

--- a/branches/core/glade/mainwindow.glade
+++ b/branches/core/glade/mainwindow.glade
@@ -1108,6 +1108,8 @@ This program is distributed in the hope that it will be useful, but WITHOUT ANY 
 You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
 In addition, as a special exception, compiling, linking, and/or using OpenSSL with this program is allowed.
+
+This program uses the MiniUPnP client library by Thomas Bernard http://miniupnp.tuxfamily.org http://miniupnp.free.fr
 </property>
     <property name="authors" translatable="yes">Developers:
   troll
