--- a/branches/core/glade/settingsdialog.glade
+++ b/branches/core/glade/settingsdialog.glade
@@ -213,6 +213,23 @@
                         <property name="column_spacing">3</property>
                         <property name="row_spacing">3</property>
                         <child>
+                          <widget class="GtkRadioButton" id="upnpRadioButton">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="label" translatable="yes">Use UPnP to let client cofigure my router</property>
+                            <property name="use_underline">True</property>
+                            <property name="response_id">0</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">portForwardRadioButton</property>
+                          </widget>
+                          <packing>
+                            <property name="top_attach">1</property>
+                            <property name="bottom_attach">2</property>
+                            <property name="x_options">GTK_FILL</property>
+                            <property name="y_options"></property>
+                          </packing>
+                        </child>
+                        <child>
                           <placeholder/>
                         </child>
                         <child>
