--- a/glade/privatemessage.glade
+++ b/glade/privatemessage.glade
@@ -30,6 +30,21 @@
         <property name="visible">True</property>
         <property name="spacing">4</property>
         <child>
+          <widget class="GtkButton" id="chatCommandsButton">
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="tooltip" translatable="yes">Chat Commands</property>
+            <property name="label">/</property>
+            <property name="focus_on_click">False</property>
+            <property name="response_id">0</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+          </packing>
+        </child>
+        <child>
           <widget class="GtkEntry" id="entry">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -157,6 +172,72 @@
         <property name="visible">True</property>
         <property name="label" translatable="yes">_Open hub</property>
         <property name="use_underline">True</property>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkMenu" id="chatCommandsMenu">
+    <property name="visible">True</property>
+    <child>
+      <widget class="GtkMenuItem" id="awayCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Away mode message on/off</property>
+        <property name="label">/away &lt;message&gt;</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="backCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Away mode off</property>
+        <property name="label">/back</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="clearCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Clear PM</property>
+        <property name="label">/clear</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="closeCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Close PM</property>
+        <property name="label">/close</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="fuserCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Add user to favorites list</property>
+        <property name="label">/fuser</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="rmfuCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Remove user favorite</property>
+        <property name="label">/rmfu</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="getlistCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Get file list</property>
+        <property name="label">/getlist</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="grantCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Grant extra slot</property>
+        <property name="label">/grant</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="helpCommandItem">
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Show help</property>
+        <property name="label">/help</property>
       </widget>
     </child>
   </widget>
