--- a/glade/settingsdialog.glade
+++ b/glade/settingsdialog.glade
@@ -3612,7 +3612,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label97">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Новая строка или TTH</property>
+                                        <property name="label" translatable="yes">New string or TTH</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3643,7 +3643,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label99">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Добавление строки или TTH в топ</property>
+                                        <property name="label" translatable="yes">Add string or TTH to the top</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3675,7 +3675,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label101">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Состояние готовности</property>
+                                        <property name="label" translatable="yes">Old string or TTH</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3707,7 +3707,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label103">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Совпадения</property>
+                                        <property name="label" translatable="yes">Matches</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3739,7 +3739,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label106">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Обновление строки или TTH</property>
+                                        <property name="label" translatable="yes">Update a string or TTH</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3814,7 +3814,7 @@ default</property>
                                       <widget class="GtkSpinButton" id="frameSPSpinButton">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="tooltip" translatable="yes">Размер кадра определяет ширину обзора, большие значения влияют на производительность</property>
+                                        <property name="tooltip" translatable="yes">Frame size</property>
                                         <property name="adjustment">50 10 256 1 10 10</property>
                                       </widget>
                                       <packing>
@@ -3824,7 +3824,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label108">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Кадр (размер)</property>
+                                        <property name="label" translatable="yes">Frame (size)</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3844,7 +3844,7 @@ default</property>
                                       <widget class="GtkSpinButton" id="waitingSPSpinButton">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="tooltip" translatable="yes">Увеличение времени ожидания увеличивает вероятность добавления в топ, но снижает динамику(обновление) кадра</property>
+                                        <property name="tooltip" translatable="yes">Waiting time(sec)</property>
                                         <property name="adjustment">40 1 300 1 10 10</property>
                                       </widget>
                                       <packing>
@@ -3854,7 +3854,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label110">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Ожидание (секунд)</property>
+                                        <property name="label" translatable="yes">Waiting (sec)</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3875,7 +3875,7 @@ default</property>
                                       <widget class="GtkSpinButton" id="topSPSpinButton">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="tooltip" translatable="yes">Количество совпадений для добавления в топ</property>
+                                        <property name="tooltip" translatable="yes">Count matches</property>
                                         <property name="adjustment">2 2 100 1 10 10</property>
                                       </widget>
                                       <packing>
@@ -3885,7 +3885,7 @@ default</property>
                                     <child>
                                       <widget class="GtkLabel" id="label112">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Топ (число совпадений, больше)</property>
+                                        <property name="label" translatable="yes">Top (count matches, >)</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
