Кнопка с меню хабов.

--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -1641,7 +1641,7 @@ Contributors:
       </packing>
     </child>
     <child>
-      <widget class="GtkToolButton" id="favHubs">
+      <widget class="GtkMenuToolButton" id="favHubs">
         <property name="visible">True</property>
         <property name="tooltip" translatable="yes">Favorite Hubs</property>
         <property name="is_important">True</property>
